--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "typeorm": "typeorm-ts-node-esm -d src/db/data-source-cli.ts"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "2.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "cache-manager": "5.2.3",
+    "cache-manager-redis-yet": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cripto": "^1.1.4",
