--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cache-manager-redis-yet": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "colors": "^1.4.0",
     "cripto": "^1.1.4",
     "dotenv": "^16.0.3",
     "pg": "^8.11.3",
